# livylogs

./: .env.example  .gitignore  BUILD_ENGINE.md  CMakeLists.txt  DEVELOPMENT_LOG.md  LICENSE  Livylogs.spec  OVERWOLF_MIGRATION.md  README.md  SYNC_INSTRUCTIONS.md  ai_handler.py  bosses.txt  build.ps1  central_discord_bot.py  check_img.py  combat_log_parser_app.py  combat_spam_filters.json  combat_spam_filters.py  constants.py  convert_icon.py  crash_log.txt  custom_stations.txt  design_template.py  detect_drawings.py  diag_windows.py  engine_debug.txt  example_combat_report.html  filters.txt  gen_strings.py  generate_discord_example_pdf.py  generate_example_report.py  generate_grid.py  generate_report.py  killstreak_manager.py  learned_typos.json  livylogs.py  livylogs_main.py  make_instructions.py  metallica.py  midistyle.py  (+46 more)
AdvBot/: Dockerfile  central_discord_bot.py  requirements-wasmer.txt  requirements.txt  server.py  wasmer.toml
admin_tools/: __init__.py  discord_bot_advanced.py  uncle_rico.py
filters/: bosses.txt  bountyhunter.txt  carbineer.txt  combatmedic.txt  commando.txt  fencer.txt  filters.txt  ghettosmith.txt  jedi.txt  pikeman.txt  pistoleer.txt  rifleman.txt  swordsman.txt  teraskasi.txt
liviusweb/: report.html  script.js  style.css
testing/: bare_stream_test.py  check_emojis.py  diag_pipe.py  diag_radio.py  engine_debug.txt  generate_assets.py  generate_report.py  monitor_audio_stream.py  monitor_perf.py  monitor_pipe.py  repro_npc_issue.py  simulate_data.py  streamed_combat_log.py  test_app_init.py  test_buffer_mechanic.py  test_calculator.py  (+39 more)
(+23 files in other folders)
